# discord-playlist-bot

./: #n[hello,world, how].txt  .replit  KNOWN BUGS.txt  README.md  dep.py  headers_auth.json  index.html  keepAlive.py  main.py  mod.py  play_final.txt  playlist.txt  pyproject.toml  replaceBadKeywords.py  spotifySelfAPI.py  youtubeSelfAPI.py  ytm-learn.py  ytm-learn1.py
assets/css/: styles.css
assets/img/: img6.psd
