[tool.poetry]
name = "discord-playlist-bot"
version = "0.1.0"
description = ""
authors = ["sarvagya14503 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.7.2"
flask = "1.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
